--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.2
 decorator==5.1.1
+et-xmlfile==1.1.0
 executing==2.0.1
 fonttools==4.53.0
 gitdb==4.0.11
@@ -27,13 +28,16 @@ jsonschema-specifications==2023.12.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+kneed==0.8.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mlxtend==0.23.1
 nest-asyncio==1.6.0
 numpy==2.0.0
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
